# mgjson

./: CMakeLists.txt  README.md
package/libs/mgjson/: Makefile
src/: CMakeLists.txt  mgjson.c  mgjson.h
